k8s/services/user-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
    # startegy
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: neerajbabu/user-service:latest
        command: ["/start.prod.sh"]
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8000
