k8s/services/user-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: user-service
spec:
  selector:
    app: user-service
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
