k8s/services/user-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-service
  labels:
    name: user-service
spec:
  rules:
  - host: "myapp.local"
    http:
      paths:
      - pathType: Prefix
        path: "/user"
        backend:
          service:
            name: user-service
            port: 
              number: 8000
